--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/OnlineSubsystem.OnlineSubsystem
-EditorStartupMap=/Game/Maps/OnlineSubsystem.OnlineSubsystem
+GameDefaultMap=/Game/MainMenu/MainMenu.MainMenu
+EditorStartupMap=/Game/MainMenu/MainMenu.MainMenu
 GlobalDefaultGameMode="/Script/MultiplayerCourse.MultiplayerCourseGameMode"
 
 [/Script/Engine.RendererSettings]
